tests/ui/pin-ergonomics/pattern-matching-mix-deref-pattern.deref_patterns.stderr
error: mix of deref patterns and normal constructors
  --> $DIR/pattern-matching-mix-deref-pattern.rs:27:9
   |
LL |         Foo { x, y } => {}
   |         ^^^^^^^^^^^^ matches on the result of dereferencing `Pin<&mut Foo<T, U>>`
...
LL |         Pin { .. } => {}
   |         ^^^^^^^^^^ matches directly on `Pin<&mut Foo<T, U>>`

error: mix of deref patterns and normal constructors
  --> $DIR/pattern-matching-mix-deref-pattern.rs:35:9
   |
LL |         Foo { x, y } => {}
   |         ^^^^^^^^^^^^ matches on the result of dereferencing `Pin<&mut Foo<T, U>>`
...
LL |         Pin { .. } => {}
   |         ^^^^^^^^^^ matches directly on `Pin<&mut Foo<T, U>>`

error: mix of deref patterns and normal constructors
  --> $DIR/pattern-matching-mix-deref-pattern.rs:46:9
   |
LL |         Foo { x, y } => {}
   |         ^^^^^^^^^^^^ matches on the result of dereferencing `Pin<&Foo<T, U>>`
...
LL |         Pin { .. } => {}
   |         ^^^^^^^^^^ matches directly on `Pin<&Foo<T, U>>`

error: mix of deref patterns and normal constructors
  --> $DIR/pattern-matching-mix-deref-pattern.rs:54:9
   |
LL |         Foo { x, y } => {}
   |         ^^^^^^^^^^^^ matches on the result of dereferencing `Pin<&Foo<T, U>>`
...
LL |         Pin { .. } => {}
   |         ^^^^^^^^^^ matches directly on `Pin<&Foo<T, U>>`

error: mix of deref patterns and normal constructors
  --> $DIR/pattern-matching-mix-deref-pattern.rs:65:9
   |
LL |         Bar(x, y) => {}
   |         ^^^^^^^^^ matches on the result of dereferencing `Pin<&mut Bar<T, U>>`
...
LL |         Pin { .. } => {}
   |         ^^^^^^^^^^ matches directly on `Pin<&mut Bar<T, U>>`

error: mix of deref patterns and normal constructors
  --> $DIR/pattern-matching-mix-deref-pattern.rs:73:9
   |
LL |         Bar(x, y) => {}
   |         ^^^^^^^^^ matches on the result of dereferencing `Pin<&mut Bar<T, U>>`
...
LL |         Pin { .. } => {}
   |         ^^^^^^^^^^ matches directly on `Pin<&mut Bar<T, U>>`

error: mix of deref patterns and normal constructors
  --> $DIR/pattern-matching-mix-deref-pattern.rs:84:9
   |
LL |         Bar(x, y) => {}
   |         ^^^^^^^^^ matches on the result of dereferencing `Pin<&Bar<T, U>>`
...
LL |         Pin { .. } => {}
   |         ^^^^^^^^^^ matches directly on `Pin<&Bar<T, U>>`

error: mix of deref patterns and normal constructors
  --> $DIR/pattern-matching-mix-deref-pattern.rs:92:9
   |
LL |         Bar(x, y) => {}
   |         ^^^^^^^^^ matches on the result of dereferencing `Pin<&Bar<T, U>>`
...
LL |         Pin { .. } => {}
   |         ^^^^^^^^^^ matches directly on `Pin<&Bar<T, U>>`

error: aborting due to 8 previous errors

